# sholat-widget

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: PRD-Auto-Update.md  PRD.md  design_system.md
docs/superpowers/plans/: 2026-07-03-sholat-widget-mvp.md
docs/superpowers/specs/: 2026-07-03-sholat-widget-mvp-design.md
scripts/: generate-latest-json.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: cities_fallback.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  audio.rs  cache.rs  city.rs  config.rs  lib.rs  location.rs  logging.rs  main.rs  models.rs  qibla.rs  schedule.rs  scheduler.rs  time.rs  tray_position.rs  updater.rs
src-tauri/tests/: api_test.rs
src-tauri/tests/fixtures/: jadwal_response.json  kabkota_search.json  kabkota_semua.json
src/components/: LocationPicker.tsx  Onboarding.tsx  Popup.tsx  PrayerRow.tsx  QiblaCompass.tsx  ReminderDialog.tsx  Settings.tsx  UpdateBadge.tsx  UpdateDialog.tsx
src/components/icons/: Mosque.tsx
src/components/ui/: dialog.tsx  sonner.tsx
src/components/windows/: MainWindow.tsx  ReminderWindow.tsx  TrayWindow.tsx
src/hooks/: useConfig.ts  useSchedule.ts  useTauriCommand.ts  useUpdate.ts  useWindowLabel.ts
src/lib/: notifications.ts  prayer.ts
src/types/: config.ts
